--- a/app/templates/top_products.html
+++ b/app/templates/top_products.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Top Products</h1>
+<h1>All Products</h1>
 
 <div style="display:flex; flex-wrap:wrap; gap:14px; align-items:center; margin-bottom:18px;">
   
